--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = view
+default_envs = seedlabs_devkit
 src_dir = firmware/src
 lib_dir = firmware/lib
 include_dir = firmware/include
@@ -41,203 +41,6 @@ build_flags =
 	
 	-DSK_PROXIMITY=1
 	-DSK_SEEDLABS_DEVKIT=1
-
-[env:view]
-extends = base_config
-board = esp32doit-devkit-v1
-board_build.partitions = default_ffat.csv
-lib_deps = 
-	${base_config.lib_deps}
-	askuric/Simple FOC @ 2.2.0
-	bodmer/TFT_eSPI@2.4.25
-	fastled/FastLED @ 3.5.0
-	bogde/HX711 @ 0.7.5
-	adafruit/Adafruit VEML7700 Library @ 1.1.1
-build_flags = 
-	${base_config.build_flags}
-	-DSK_DISPLAY=1
-	-DSK_DISPLAY_ROTATION=0
-	-DSK_LEDS=1
-	-DNUM_LEDS=8
-	-DSK_STRAIN=1
-	-DSK_ALS=1
-	-DSENSOR_MT6701=1
-	-DSK_INVERT_ROTATION=1
-	
-	-DMOTOR_WANZHIDA_ONCE_TOP=1
-	
-	-DPIN_UH=26
-	-DPIN_UL=25
-	-DPIN_VH=27
-	-DPIN_VL=32
-	-DPIN_WH=12
-	-DPIN_WL=33
-	-DPIN_BUTTON_NEXT=-1
-	-DPIN_BUTTON_PREV=-1
-	-DPIN_SDA=15
-	-DPIN_SCL=8
-	-DPIN_MT_DATA=37
-	-DPIN_MT_CLOCK=13
-	-DPIN_MT_CSN=14
-	-DPIN_LED_DATA=7
-	-DPIN_LCD_BACKLIGHT=19
-	
-	-DDESCRIPTION_FONT=Roboto_Thin_24
-	-DDESCRIPTION_Y_OFFSET=20
-	-DVALUE_OFFSET=30
-	-DDRAW_ARC=0
-	
-	-DUSER_SETUP_LOADED=1
-	-DGC9A01_DRIVER=1
-	-DCGRAM_OFFSET=1
-	-DTFT_WIDTH=240
-	-DTFT_HEIGHT=240
-	-DTFT_MISO=-1
-	-DTFT_MOSI=5
-	-DTFT_SCLK=20
-	-DTFT_CS=21
-	-DTFT_DC=22
-	-DTFT_RST=4
-	-DTFT_BL=-1
-	-DLOAD_GLCD=1
-	-DLOAD_GFXFF=1
-	-DSPI_FREQUENCY=40000000
-	
-	
-	-DCORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
-	
-	-DFASTLED_UNUSABLE_PIN_MASK=0x100740LL
-	-DSOC_GPIO_VALID_GPIO_MASK=0xFF0EFFFFFF
-	-DSOC_GPIO_VALID_OUTPUT_GPIO_MASK=0x30EFFFFFF
-
-[env:nanofoc]
-extends = base_config
-platform = espressif32@6.3.1
-board = adafruit_feather_esp32s3
-board_build.partitions = firmware/partitions-4MB-fat.csv
-lib_deps = 
-	${base_config.lib_deps}
-	askuric/Simple FOC@2.3.0
-	bodmer/TFT_eSPI@2.5.0
-	bblanchon/ArduinoJson@^6.21.5
-build_flags = 
-	${base_config.build_flags}
-	-DLOGS_STREAM=1
-	-DSK_DISPLAY=0
-	-DSK_DISPLAY_ROTATION=0
-	-DSK_LEDS=0
-	-DNUM_LEDS=8
-	-DSK_STRAIN=0
-	-DSK_ALS=0
-	
-	-DSENSOR_MAQ430=1
-	-DPIN_MAQ_SCK=6
-	-DPIN_MAQ_MISO=7
-	-DPIN_MAQ_MOSI=5
-	-DPIN_MAQ_SS=4
-	-DSK_INVERT_ROTATION=1
-	
-	-DMOTOR_MAD2804=1
-	
-	-DPIN_UH=21
-	-DPIN_UL=12
-	-DPIN_VH=14
-	-DPIN_VL=10
-	-DPIN_WH=13
-	-DPIN_WL=11
-	-DPIN_BUTTON_NEXT=-1
-	-DPIN_BUTTON_PREV=-1
-	-DPIN_LED_DATA=7
-	-DPIN_LCD_BACKLIGHT=08
-	
-	-DPIO_FRAMEWORK_ARDUINO_ENABLE_CDC=1
-	-DUSBCON=1
-	-DARDUINO_USB_CDC_ON_BOOT=1
-	-DARDUINO_USB_MODE=1
-	-DCORE_DEBUG_LEVEL=2
-	-DHSPI_SPEED=100000
-	-DVSPI_SPEED=400000
-
-[env:brushknight_esp32s3]
-extends = base_config
-platform = espressif32@6.3.1
-board = esp32-s3-devkitc-1
-board_build.partitions = default_ffat.csv
-monitor_speed = 115200
-lib_deps = 
-	${base_config.lib_deps}
-	bodmer/TFT_eSPI@2.5.0
-	fastled/FastLED @ 3.5.0
-	bogde/HX711 @ 0.7.5
-	adafruit/Adafruit VEML7700 Library @ 1.1.1
-	askuric/Simple FOC@2.3.0
-	knolleary/PubSubClient@^2.8
-build_flags = 
-	${base_config.build_flags}
-	-DMONITOR_SPEED=115200
-	-DSK_DISPLAY=1
-	-DSK_BACKLIGHT_BIT_DEPTH=12
-	-DSK_DISPLAY_ROTATION=0
-	-DSK_LEDS=1
-	-DNUM_LEDS=8
-	-DSK_STRAIN=1
-	-DSK_ALS=0
-	-DSENSOR_MT6701=1
-	-DSK_INVERT_ROTATION=1
-	
-	-DSK_NETWORKING=1
-	
-	-DMOTOR_WANZHIDA_ONCE_TOP=1
-	
-	-DSTRAIN_DO=38
-	-DSTRAIN_SCK=1
-	
-	-DPIN_UH=20
-	-DPIN_UL=19
-	-DPIN_VH=21
-	-DPIN_VL=17
-	-DPIN_WH=12
-	-DPIN_WL=18
-	
-	-DPIN_BUTTON_NEXT=-1
-	-DPIN_BUTTON_PREV=-1
-	-DPIN_LED_DATA=7
-	-DPIN_LCD_BACKLIGHT=5
-	
-	-DPIN_SDA=15
-	-DPIN_SCL=8
-	
-	-DPIN_MT_DATA=37
-	-DPIN_MT_CLOCK=13
-	-DPIN_MT_CSN=14
-	
-	-DDESCRIPTION_FONT=Roboto_Thin_24
-	-DDESCRIPTION_Y_OFFSET=20
-	-DVALUE_OFFSET=30
-	-DDRAW_ARC=0
-	
-	-DUSER_SETUP_LOADED=1
-	-DGC9A01_DRIVER=1
-	-DCGRAM_OFFSET=1
-	-DTFT_WIDTH=240
-	-DTFT_HEIGHT=240
-	-DTFT_MISO=-1
-	-DTFT_MOSI=3
-	-DTFT_SCLK=4
-	-DTFT_CS=9
-	-DTFT_DC=2
-	-DTFT_RST=6
-	-DTFT_BL=-1
-	-DLOAD_GLCD=1
-	-DLOAD_GFXFF=1
-	-DSPI_FREQUENCY=40000000
-	
-	
-	-DCORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
-	
-	-DFASTLED_UNUSABLE_PIN_MASK=0x100740LL
-	-DSOC_GPIO_VALID_GPIO_MASK=0xFF0EFFFFFF
-	-DSOC_GPIO_VALID_OUTPUT_GPIO_MASK=0x30EFFFFFF
 
 [env:seedlabs_devkit]
 extends = base_config
