--- a/.github/workflows/pio.yml
+++ b/.github/workflows/pio.yml
@@ -52,11 +52,11 @@ jobs:
       if: always() && steps.pio_install.outcome == 'success'
       run: |
         pio run \
-          -e view
+          -e seedlabs_devkit
 
-    - name: Build Firmware (nanofoc)
-      # Run regardless of other build step failures, as long as setup steps completed
-      if: always() && steps.pio_install.outcome == 'success'
-      run: |
-        pio run \
-          -e nanofoc
+    # - name: Build Firmware (nanofoc)
+    #   # Run regardless of other build step failures, as long as setup steps completed
+    #   if: always() && steps.pio_install.outcome == 'success'
+    #   run: |
+    #     pio run \
+    #       -e nanofoc
