--- a/platformio.ini
+++ b/platformio.ini
@@ -126,3 +126,10 @@ build_flags =
 	-DFASTLED_UNUSABLE_PIN_MASK=0x100740LL
 	-DSOC_GPIO_VALID_GPIO_MASK=0xFF0EFFFFFF
 	-DSOC_GPIO_VALID_OUTPUT_GPIO_MASK=0x30EFFFFFF
+
+    -DGITHUB_ACTION=0
+
+[env:seedlabs_devkit_github_action]
+extends = seedlabs_devkit
+build_flags = 
+    -DSK_NETWORKING=0
