Now finally it should be fixed

--- a/platformio.ini
+++ b/platformio.ini
@@ -130,6 +130,8 @@ build_flags =
     -DGITHUB_ACTION=0
 
 [env:seedlabs_devkit_github_action]
-extends = seedlabs_devkit
+extends = env:seedlabs_devkit
 build_flags = 
+    ${base_config.build_flags}
+    ${env:seedlabs_devkit.build_flags}
     -DSK_NETWORKING=0
