--- a/platformio.ini
+++ b/platformio.ini
@@ -127,11 +127,90 @@ build_flags =
 	-DSOC_GPIO_VALID_GPIO_MASK=0xFF0EFFFFFF
 	-DSOC_GPIO_VALID_OUTPUT_GPIO_MASK=0x30EFFFFFF
 
-    -DGITHUB_ACTION=0
-
 [env:seedlabs_devkit_github_action]
 extends = env:seedlabs_devkit
 build_flags = 
     ${base_config.build_flags}
     ${env:seedlabs_devkit.build_flags}
     -DSK_NETWORKING=0
+
+[env:brushknight_esp32s3]
+extends = base_config
+platform = espressif32@6.3.1
+board = esp32-s3-devkitc-1
+board_build.partitions = default_ffat.csv
+monitor_speed = 115200
+lib_deps = 
+	${base_config.lib_deps}
+	bodmer/TFT_eSPI@2.5.0
+	fastled/FastLED @ 3.5.0
+	bogde/HX711 @ 0.7.5
+	adafruit/Adafruit VEML7700 Library @ 1.1.1
+	askuric/Simple FOC@2.3.0
+	knolleary/PubSubClient@^2.8
+build_flags = 
+	${base_config.build_flags}
+	-DMONITOR_SPEED=115200
+	-DSK_DISPLAY=1
+	-DSK_BACKLIGHT_BIT_DEPTH=12
+	-DSK_DISPLAY_ROTATION=0
+	-DSK_LEDS=1
+	-DNUM_LEDS=8
+	-DSK_STRAIN=1
+	-DSK_ALS=0
+	-DSENSOR_MT6701=1
+	-DSK_INVERT_ROTATION=1
+	
+	-DSK_NETWORKING=1
+	
+	-DMOTOR_WANZHIDA_ONCE_TOP=1
+	
+	-DSTRAIN_DO=38
+	-DSTRAIN_SCK=1
+	
+	-DPIN_UH=20
+	-DPIN_UL=19
+	-DPIN_VH=21
+	-DPIN_VL=17
+	-DPIN_WH=12
+	-DPIN_WL=18
+	
+	-DPIN_BUTTON_NEXT=-1
+	-DPIN_BUTTON_PREV=-1
+	-DPIN_LED_DATA=7
+	-DPIN_LCD_BACKLIGHT=5
+	
+	-DPIN_SDA=15
+	-DPIN_SCL=8
+	
+	-DPIN_MT_DATA=37
+	-DPIN_MT_CLOCK=13
+	-DPIN_MT_CSN=14
+	
+	-DDESCRIPTION_FONT=Roboto_Thin_24
+	-DDESCRIPTION_Y_OFFSET=20
+	-DVALUE_OFFSET=30
+	-DDRAW_ARC=0
+	
+	-DUSER_SETUP_LOADED=1
+	-DGC9A01_DRIVER=1
+	-DCGRAM_OFFSET=1
+	-DTFT_WIDTH=240
+	-DTFT_HEIGHT=240
+	-DTFT_MISO=-1
+	-DTFT_MOSI=3
+	-DTFT_SCLK=4
+	-DTFT_CS=9
+	-DTFT_DC=2
+	-DTFT_RST=6
+	-DTFT_BL=-1
+	-DLOAD_GLCD=1
+	-DLOAD_GFXFF=1
+	-DSPI_FREQUENCY=40000000
+	
+	
+	-DCORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
+	
+	-DFASTLED_UNUSABLE_PIN_MASK=0x100740LL
+	-DSOC_GPIO_VALID_GPIO_MASK=0xFF0EFFFFFF
+	-DSOC_GPIO_VALID_OUTPUT_GPIO_MASK=0x30EFFFFFF
