Added C QRCode library

--- a/platformio.ini
+++ b/platformio.ini
@@ -57,6 +57,7 @@ lib_deps =
 	askuric/Simple FOC@2.3.0
 	adafruit/Adafruit_VL53L0X@^1.2.2
 	knolleary/PubSubClient@^2.8
+	ricmoo/QRCode@^0.0.1
 build_flags = 
 	${base_config.build_flags}
 	-DSK_FORCE_UART_STREAM=0
@@ -130,9 +131,10 @@ build_flags =
 [env:seedlabs_devkit_github_action]
 extends = env:seedlabs_devkit
 build_flags = 
-    ${base_config.build_flags}
-    ${env:seedlabs_devkit.build_flags}
-    -DSK_NETWORKING=0
+	${base_config.build_flags}
+	${env:seedlabs_devkit.build_flags}
+	-DSK_NETWORKING=0
+lib_deps = ricmoo/QRCode@^0.0.1
 
 [env:brushknight_esp32s3]
 extends = base_config
@@ -148,6 +150,7 @@ lib_deps =
 	adafruit/Adafruit VEML7700 Library @ 1.1.1
 	askuric/Simple FOC@2.3.0
 	knolleary/PubSubClient@^2.8
+	ricmoo/QRCode@^0.0.1
 build_flags = 
 	${base_config.build_flags}
 	-DMONITOR_SPEED=115200
