Added 2 types of press events

--- a/platformio.ini
+++ b/platformio.ini
@@ -168,8 +168,8 @@ build_flags =
 	
 	-DMOTOR_WANZHIDA_ONCE_TOP=1
 	
-	-DSTRAIN_DO=38
-	-DSTRAIN_SCK=1
+	-DPIN_STRAIN_DO=38
+	-DPIN_STRAIN_SCK=1
 	
 	-DPIN_UH=20
 	-DPIN_UL=19
