--- a/platformio.ini
+++ b/platformio.ini
@@ -58,6 +58,7 @@ lib_deps =
 	adafruit/Adafruit_VL53L0X@^1.2.2
 	knolleary/PubSubClient@^2.8
 	ricmoo/QRCode@^0.0.1
+	ayushsharma82/ElegantOTA@^3.1.0
 build_flags = 
 	${base_config.build_flags}
 	-DSK_FORCE_UART_STREAM=0
@@ -134,7 +135,9 @@ build_flags =
 	${base_config.build_flags}
 	${env:seedlabs_devkit.build_flags}
 	-DSK_NETWORKING=0
-lib_deps = ricmoo/QRCode@^0.0.1
+lib_deps = 
+	ricmoo/QRCode@^0.0.1
+	ayushsharma82/ElegantOTA@^3.1.0
 
 [env:brushknight_esp32s3]
 extends = base_config
@@ -151,6 +154,7 @@ lib_deps =
 	askuric/Simple FOC@2.3.0
 	knolleary/PubSubClient@^2.8
 	ricmoo/QRCode@^0.0.1
+	ayushsharma82/ElegantOTA@^3.1.0
 build_flags = 
 	${base_config.build_flags}
 	-DMONITOR_SPEED=115200
