[WIP] Added ElegantOTA (#33)

--- a/platformio.ini
+++ b/platformio.ini
@@ -36,6 +36,7 @@ lib_deps =
 	adafruit/Adafruit_VL53L0X@^1.2.2
 	knolleary/PubSubClient@^2.8
 	ricmoo/QRCode@^0.0.1
+	ayushsharma82/ElegantOTA@^3.1.0
 build_flags = 
     -D MONITOR_SPEED=115200
     -D SK_SEEDLABS_DEVKIT=1
