--- a/platformio.ini
+++ b/platformio.ini
@@ -129,6 +129,7 @@ build_flags =
 build_flags = 
     ${env:seedlabs_devkit.build_flags}
     -D SK_DISPLAY_ROTATION=0
+    -D SK_ALS=0
 
 [env:seedlabs_devkit_github_action] 
 build_flags = 
