added updated stopwatch app with laps

--- a/platformio.ini
+++ b/platformio.ini
@@ -54,6 +54,9 @@ build_flags =
     ; Invert direction of angle sensor (motor direction is detected relative to angle sensor as part of the calibration procedure)
     -D SK_INVERT_ROTATION=1
  
+	; Boot into 0 - unboarding, 1 - normal apps
+	-D SK_UI_BOOT_MODE=1
+
     -D MOTOR_WANZHIDA_ONCE_TOP=1
  
     ; Pin configurations
