--- a/platformio.ini
+++ b/platformio.ini
@@ -42,7 +42,7 @@ build_flags =
     -D SK_SEEDLABS_DEVKIT=1
 
     ; Networking enabled: 1=enable, 0=disable
-    -D SK_NETWORKING=1
+    -D SK_NETWORKING=0
     ; Display enabled: 1=enable, 0=disable
     -D SK_DISPLAY=1
     ; LEDs enabled: 1=enable, 0=disable
@@ -54,6 +54,9 @@ build_flags =
     ; Invert direction of angle sensor (motor direction is detected relative to angle sensor as part of the calibration procedure)
     -D SK_INVERT_ROTATION=1
  
+	; Boot into 0 - unboarding, 1 - normal apps
+	-D SK_UI_BOOT_MODE=1
+
     -D MOTOR_WANZHIDA_ONCE_TOP=1
  
     ; Pin configurations
