WiFi tries to connect to saved credentials if there are none, start AP. User connects to wifi trough QR code, knob sees that a client has connected switches screen to display URL for knob to setup WiFi.

--- a/platformio.ini
+++ b/platformio.ini
@@ -42,13 +42,15 @@ build_flags =
 	-D SK_SEEDLABS_DEVKIT=1
 	
 	-D SK_NETWORKING=1
+    -D SK_REMEMBER_WIFI=0
+
 	-D SK_DISPLAY=1
 	-D SK_LEDS=1
 	-D SK_STRAIN=1
 	-D SENSOR_MT6701=1
 	-D SK_INVERT_ROTATION=1
 	
-	-D SK_UI_BOOT_MODE=1
+	-D SK_UI_BOOT_MODE=0
 	
 	-D MOTOR_WANZHIDA_ONCE_TOP=1
 	
