--- a/platformio.ini
+++ b/platformio.ini
@@ -37,82 +37,73 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
 	ricmoo/QRCode@^0.0.1
 	ayushsharma82/ElegantOTA@^3.1.0
+    me-no-dev/AsyncTCP@^1.1.1
+	https://github.com/me-no-dev/ESPAsyncWebServer.git
 build_flags = 
-    -D MONITOR_SPEED=115200
-    -D SK_SEEDLABS_DEVKIT=1
+	-D MONITOR_SPEED=115200
+	-D SK_SEEDLABS_DEVKIT=1
+	
+	-D SK_NETWORKING=1
+	-D SK_DISPLAY=1
+	-D SK_LEDS=1
+	-D SK_STRAIN=1
+	-D SENSOR_MT6701=1
+	-D SK_INVERT_ROTATION=1
 
-    ; Networking enabled: 1=enable, 0=disable
-    -D SK_NETWORKING=0
-    ; Display enabled: 1=enable, 0=disable
-    -D SK_DISPLAY=1
-    ; LEDs enabled: 1=enable, 0=disable
-    -D SK_LEDS=1
-    ; Strain-gauge press input enabled: 1=enable, 0=disable
-    -D SK_STRAIN=1
-    ; Use MT6701 magnetic encoder
-    -D SENSOR_MT6701=1
-    ; Invert direction of angle sensor (motor direction is detected relative to angle sensor as part of the calibration procedure)
-    -D SK_INVERT_ROTATION=1
- 
-	; Boot into 0 - unboarding, 1 - normal apps
+    -D ELEGANTOTA_USE_ASYNC_WEBSERVER=1
+	
 	-D SK_UI_BOOT_MODE=1
-
-    -D MOTOR_WANZHIDA_ONCE_TOP=1
- 
-    ; Pin configurations
-    -D PIN_BUTTON_NEXT=-1
+	
+	-D MOTOR_WANZHIDA_ONCE_TOP=1
+	
+	-D PIN_BUTTON_NEXT=-1
 	-D PIN_BUTTON_PREV=-1
-    -D PIN_LCD_BACKLIGHT=5
-    -D PIN_MT_CLOCK=13
-    -D STRAIN_DO=38
-    -D STRAIN_SCK=2
-
-    -D TFT_MISO=-1
+	-D PIN_LCD_BACKLIGHT=5
+	-D PIN_MT_CLOCK=13
+	-D STRAIN_DO=38
+	-D STRAIN_SCK=2
+	
+	-D TFT_MISO=-1
 	-D TFT_MOSI=3
-    -D TFT_SCLK=4
+	-D TFT_SCLK=4
 	-D TFT_CS=9
 	-D TFT_DC=2
-
-    -D TFT_WIDTH=240
+	
+	-D TFT_WIDTH=240
 	-D TFT_HEIGHT=240
- 
-    -D DESCRIPTION_FONT=Roboto_Thin_24
-    -D DESCRIPTION_Y_OFFSET=20
- 
-    -D VALUE_OFFSET=30
-    -D DRAW_ARC=0
- 
-    -D USER_SETUP_LOADED=1
-    -D GC9A01_DRIVER=1
+	
+	-D DESCRIPTION_FONT=Roboto_Thin_24
+	-D DESCRIPTION_Y_OFFSET=20
+	
+	-D VALUE_OFFSET=30
+	-D DRAW_ARC=0
+	
+	-D USER_SETUP_LOADED=1
+	-D GC9A01_DRIVER=1
 	-D CGRAM_OFFSET=1
- 
-    -D TFT_BL=-1
+	
+	-D TFT_BL=-1
 	-D LOAD_GLCD=1
 	-D LOAD_GFXFF=1
 	-D SPI_FREQUENCY=40000000
- 
-    -D SK_BACKLIGHT_BIT_DEPTH=12
-
-    -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
- 
-    -D FASTLED_UNUSABLE_PIN_MASK=0x100740LL
+	
+	-D SK_BACKLIGHT_BIT_DEPTH=12
+	
+	-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
+	
+	-D FASTLED_UNUSABLE_PIN_MASK=0x100740LL
 	-D SOC_GPIO_VALID_GPIO_MASK=0xFF0EFFFFFF
 	-D SOC_GPIO_VALID_OUTPUT_GPIO_MASK=0x30EFFFFFF
-     
+
 [env:seedlabs_devkit]
 build_flags = 
-    ${env.build_flags}
+	${env.build_flags}
 	-D SK_FORCE_UART_STREAM=0
-    ; Display orientation: 2=usb bottom, 0=usb top
 	-D SK_DISPLAY_ROTATION=2
-    ; Number of LEDs
 	-D NUM_LEDS=72
-    ; Use VEML7700 ambient light sensor
 	-D SK_ALS=1
-	; Use VL53L0X ToF sensor 
 	-D SK_PROXIMITY=1
-	 
-    ; Pin configurations
+	
 	-D PIN_UH=8
 	-D PIN_UL=16
 	-D PIN_VH=18
@@ -125,32 +116,29 @@ build_flags =
 	-D PIN_MT_DATA=14
 	-D PIN_MT_CSN=11
 	-D PIN_STRAIN_DO=21
-    -D PIN_STRAIN_SCK=1
+	-D PIN_STRAIN_SCK=1
 	-D TFT_RST=10
 
 [env:seedlabs_devkit_inverted_display]
 build_flags = 
-    ${env:seedlabs_devkit.build_flags}
-    -D SK_DISPLAY_ROTATION=0
-    -D SK_ALS=0
+	${env:seedlabs_devkit.build_flags}
+	-D SK_DISPLAY_ROTATION=0
+	-D SK_ALS=0
 
-[env:seedlabs_devkit_github_action] 
+[env:seedlabs_devkit_github_action]
 build_flags = 
 	${env:seedlabs_devkit.build_flags}
 	-D SK_NETWORKING=0
 
 [env:brushknight_esp32s3]
 build_flags = 
-    ${env.build_flags}
-    ; Display orientation: 0=usb bottom, 2=usb top
+	${env.build_flags}
 	-D SK_DISPLAY_ROTATION=0
-    ; Number of LEDs
 	-D NUM_LEDS=8
 	-D SK_ALS=0
-    -D SK_PROXIMITY=0
-	 
-    ; Pin configurations
-    -D PIN_STRAIN_DO=38
+	-D SK_PROXIMITY=0
+	
+	-D PIN_STRAIN_DO=38
 	-D PIN_UH=20
 	-D PIN_UL=19
 	-D PIN_VH=21
@@ -163,5 +151,5 @@ build_flags =
 	-D PIN_MT_DATA=37
 	-D PIN_MT_CSN=14
 	-D TFT_RST=6
-    -D STRAIN_DO=38
-    -D STRAIN_SCK=2
+	-D STRAIN_DO=38
+	-D STRAIN_SCK=2
