Extracted MQTT into another feature

--- a/platformio.ini
+++ b/platformio.ini
@@ -40,57 +40,58 @@ lib_deps =
     me-no-dev/AsyncTCP@^1.1.1
 	https://github.com/me-no-dev/ESPAsyncWebServer.git
 build_flags = 
-	-D MONITOR_SPEED=115200
-	-D SK_SEEDLABS_DEVKIT=1
-	
-	-D SK_NETWORKING=1
+	; Features
+	-D SK_WIFI=1
+	-D SK_MQTT=1 ; requires WIFI feature to be enabled
 	-D SK_DISPLAY=1
-	-D SK_LEDS=1
+	-D SK_LEDS=1 
 	-D SK_STRAIN=1
+	-D SK_ALS=0
+	-D SK_PROXIMITY=0
+
+	; Motor & magnetometer config
 	-D SENSOR_MT6701=1
 	-D SK_INVERT_ROTATION=1
+	-D MOTOR_WANZHIDA_ONCE_TOP=1
+	-D PIN_MT_CLOCK=13
 
+	; OTA config
     -D ELEGANTOTA_USE_ASYNC_WEBSERVER=1
 	
+	; Dev options
 	-D SK_UI_BOOT_MODE=1
+	-D MONITOR_SPEED=115200
+	-D SK_FORCE_UART_STREAM=0
 	
-	-D MOTOR_WANZHIDA_ONCE_TOP=1
-	
-	-D PIN_BUTTON_NEXT=-1
-	-D PIN_BUTTON_PREV=-1
-	-D PIN_LCD_BACKLIGHT=5
-	-D PIN_MT_CLOCK=13
+	; TODO: remove this option
+	-D SK_REMEMBER_WIFI=0
+
+	; Strain sensor config
 	-D STRAIN_DO=38
 	-D STRAIN_SCK=2
-	
+
+	; Screen config
+	-D PIN_LCD_BACKLIGHT=5
 	-D TFT_MISO=-1
 	-D TFT_MOSI=3
 	-D TFT_SCLK=4
 	-D TFT_CS=9
 	-D TFT_DC=2
-	
+	-D TFT_BL=-1
+	-D TFT_RST=10
 	-D TFT_WIDTH=240
 	-D TFT_HEIGHT=240
-	
-	-D DESCRIPTION_FONT=Roboto_Thin_24
-	-D DESCRIPTION_Y_OFFSET=20
-	
-	-D VALUE_OFFSET=30
-	-D DRAW_ARC=0
-	
 	-D USER_SETUP_LOADED=1
 	-D GC9A01_DRIVER=1
 	-D CGRAM_OFFSET=1
-	
-	-D TFT_BL=-1
 	-D LOAD_GLCD=1
 	-D LOAD_GFXFF=1
 	-D SPI_FREQUENCY=40000000
-	
 	-D SK_BACKLIGHT_BIT_DEPTH=12
 	
-	-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
 	
+	; TODO: chech where those variables used
+	-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
 	-D FASTLED_UNUSABLE_PIN_MASK=0x100740LL
 	-D SOC_GPIO_VALID_GPIO_MASK=0xFF0EFFFFFF
 	-D SOC_GPIO_VALID_OUTPUT_GPIO_MASK=0x30EFFFFFF
@@ -98,27 +99,35 @@ build_flags =
 [env:seedlabs_devkit]
 build_flags = 
 	${env.build_flags}
-	-D SK_FORCE_UART_STREAM=0
-	-D SK_DISPLAY_ROTATION=2
-	-D NUM_LEDS=72
+	; Features overrides
 	-D SK_ALS=1
-	-D SK_PROXIMITY=1
-	
+	-D SK_PROXIMITY=1 
+	-D SK_MQTT=0
+
+	; Generic system config
+	-D PIN_SDA=39
+	-D PIN_SCL=38
+
+	; Screen config
+	-D SK_DISPLAY_ROTATION=2
+
+	; LED ring feature
+	-D PIN_LED_DATA=12
+	-D NUM_LEDS=72
+
+	; Motor & magnetometer config
 	-D PIN_UH=8
 	-D PIN_UL=16
 	-D PIN_VH=18
 	-D PIN_VL=7
 	-D PIN_WH=17
 	-D PIN_WL=15
-	-D PIN_LED_DATA=12
-	-D PIN_SDA=39
-	-D PIN_SCL=38
 	-D PIN_MT_DATA=14
 	-D PIN_MT_CSN=11
+
+	; Strain sensor 
 	-D PIN_STRAIN_DO=21
 	-D PIN_STRAIN_SCK=1
-	-D TFT_RST=10
-
 [env:seedlabs_devkit_inverted_display]
 build_flags = 
 	${env:seedlabs_devkit.build_flags}
@@ -133,6 +142,7 @@ build_flags =
 [env:brushknight_esp32s3]
 build_flags = 
 	${env.build_flags}
+	; TODO: update this section 
 	-D SK_DISPLAY_ROTATION=0
 	-D NUM_LEDS=8
 	-D SK_ALS=0
