--- a/platformio.ini
+++ b/platformio.ini
@@ -134,6 +134,13 @@ build_flags =
 	-D SK_DISPLAY_ROTATION=0
 	-D SK_ALS=0
 
+[env:seedlabs_devkit_onboarding]
+build_flags = 
+	${env:seedlabs_devkit.build_flags}
+	; -D SK_DISPLAY_ROTATION=0
+	-D SK_UI_BOOT_MODE=0
+	-D SK_ALS=0
+
 [env:seedlabs_devkit_github_action]
 build_flags = 
 	${env:seedlabs_devkit.build_flags}
