--- a/platformio.ini
+++ b/platformio.ini
@@ -137,9 +137,11 @@ build_flags =
 [env:seedlabs_devkit_onboarding]
 build_flags = 
 	${env:seedlabs_devkit.build_flags}
-	; -D SK_DISPLAY_ROTATION=0
+	-D SK_DISPLAY_ROTATION=0
 	-D SK_UI_BOOT_MODE=0
 	-D SK_ALS=0
+	-D SK_WIFI=0
+	-D SK_MQTT=0 ; requires WIFI feature to be enabled
 
 [env:seedlabs_devkit_github_action]
 build_flags = 
