--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = seedlabs_devkit
+default_envs = seedlabs_devkit_onboarding
 src_dir = firmware/src
 lib_dir = firmware/lib
 include_dir = firmware/include
@@ -141,7 +141,7 @@ build_flags =
 	-D SK_UI_BOOT_MODE=0
 	-D SK_ALS=0
 	-D SK_WIFI=1
-	-D SK_MQTT=0 ; requires WIFI feature to be enabled
+	-D SK_MQTT=1 ; requires WIFI feature to be enabled
 
 [env:seedlabs_devkit_github_action]
 build_flags = 
