Changed default build/project env.

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = seedlabs_devkit_onboarding
+default_envs = seedlabs_devkit
 src_dir = firmware/src
 lib_dir = firmware/lib
 include_dir = firmware/include
