--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,56 +10,65 @@
     "editor.formatOnSave": true,
     "editor.formatOnSaveMode": "file",
     "files.associations": {
-      ".css": "tailwindcss",
-      ".vue": "tailwindcss",
-      "cstddef": "cpp",
-      "limits": "cpp",
-      "array": "cpp",
-      "*.tcc": "cpp",
-      "cctype": "cpp",
-      "clocale": "cpp",
-      "cmath": "cpp",
-      "cstdarg": "cpp",
-      "cstdint": "cpp",
-      "cstdio": "cpp",
-      "cstdlib": "cpp",
-      "cstring": "cpp",
-      "ctime": "cpp",
-      "cwchar": "cpp",
-      "cwctype": "cpp",
-      "deque": "cpp",
-      "unordered_map": "cpp",
-      "unordered_set": "cpp",
-      "vector": "cpp",
-      "exception": "cpp",
-      "algorithm": "cpp",
-      "functional": "cpp",
-      "system_error": "cpp",
-      "tuple": "cpp",
-      "type_traits": "cpp",
-      "fstream": "cpp",
-      "initializer_list": "cpp",
-      "iomanip": "cpp",
-      "iosfwd": "cpp",
-      "istream": "cpp",
-      "memory": "cpp",
-      "new": "cpp",
-      "ostream": "cpp",
-      "numeric": "cpp",
-      "sstream": "cpp",
-      "stdexcept": "cpp",
-      "streambuf": "cpp",
-      "cinttypes": "cpp",
-      "utility": "cpp",
-      "typeinfo": "cpp",
-      "string": "cpp",
-      "random": "cpp",
-      "atomic": "cpp",
-      "iterator": "cpp",
-      "map": "cpp",
-      "memory_resource": "cpp",
-      "optional": "cpp",
-      "string_view": "cpp"
+        ".css": "tailwindcss",
+        ".vue": "tailwindcss",
+        "cstddef": "cpp",
+        "limits": "cpp",
+        "array": "cpp",
+        "*.tcc": "cpp",
+        "cctype": "cpp",
+        "clocale": "cpp",
+        "cmath": "cpp",
+        "cstdarg": "cpp",
+        "cstdint": "cpp",
+        "cstdio": "cpp",
+        "cstdlib": "cpp",
+        "cstring": "cpp",
+        "ctime": "cpp",
+        "cwchar": "cpp",
+        "cwctype": "cpp",
+        "deque": "cpp",
+        "unordered_map": "cpp",
+        "unordered_set": "cpp",
+        "vector": "cpp",
+        "exception": "cpp",
+        "algorithm": "cpp",
+        "functional": "cpp",
+        "system_error": "cpp",
+        "tuple": "cpp",
+        "type_traits": "cpp",
+        "fstream": "cpp",
+        "initializer_list": "cpp",
+        "iomanip": "cpp",
+        "iosfwd": "cpp",
+        "istream": "cpp",
+        "memory": "cpp",
+        "new": "cpp",
+        "ostream": "cpp",
+        "numeric": "cpp",
+        "sstream": "cpp",
+        "stdexcept": "cpp",
+        "streambuf": "cpp",
+        "cinttypes": "cpp",
+        "utility": "cpp",
+        "typeinfo": "cpp",
+        "string": "cpp",
+        "random": "cpp",
+        "atomic": "cpp",
+        "iterator": "cpp",
+        "map": "cpp",
+        "memory_resource": "cpp",
+        "optional": "cpp",
+        "string_view": "cpp",
+        "app.h": "c",
+        "nds1210pt7b.h": "c",
+        "roboto_thin_20.h": "c",
+        "arduino.h": "c",
+        "tft_espi.h": "c",
+        "bitset": "cpp",
+        "chrono": "cpp",
+        "ratio": "cpp",
+        "regex": "cpp"
     },
     "[cpp]": {
         "editor.defaultFormatter": "ms-vscode.cpptools"
