--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = seedlabs_devkit
+default_envs = seedlabs_devkit_onboarding
 src_dir = firmware/src
 lib_dir = firmware/lib
 include_dir = firmware/include
@@ -19,8 +19,9 @@ data_dir = firmware/data
 [env]
 platform = espressif32@6.3.1
 framework = arduino
-board = esp32-s3-devkitc-1
-board_build.partitions = default_ffat.csv
+board = esp32-s3-devkitc-1-n16r8v
+;TODO: update partition table to be aligned with n16r8
+board_build.partitions = ./firmware/partitions-4MB-fat.csv
 upload_speed = 921600
 monitor_speed = 115200
 lib_deps = 
@@ -62,9 +63,9 @@ build_flags =
 	-D SK_UI_BOOT_MODE=1
 	-D MONITOR_SPEED=115200
 	-D SK_FORCE_UART_STREAM=0
-	
-	; TODO: remove this option
-	-D SK_REMEMBER_WIFI=0
+
+	; System
+	-D CONFIG_AUTOSTART_ARDUINO=1
 
 	; Strain sensor config
 	-D STRAIN_DO=38
