Using serial monitor filters

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ lib_dir = firmware/lib
 include_dir = firmware/include
 test_dir = firmware/test
 data_dir = firmware/data
+monitor_filters = esp32_exception_decoder,debug,colorize
 
 [env]
 platform = espressif32@6.3.1
