LVGL Hello world

--- a/platformio.ini
+++ b/platformio.ini
@@ -25,13 +25,15 @@ board = esp32-s3-devkitc-1-n16r8v
 board_build.partitions = ./firmware/partitions-4MB-fat.csv
 upload_speed = 921600
 monitor_speed = 115200
+build_type = debug
 monitor_filters = esp32_exception_decoder
 lib_deps = 
 	infineon/TLV493D-Magnetic-Sensor @ 1.0.3
 	bxparks/AceButton @ 1.9.1
 	bakercp/PacketSerial @ 1.4.0
 	nanopb/Nanopb @ 0.4.7
-	bodmer/TFT_eSPI@2.5.33
+	bodmer/TFT_eSPI@2.5.34
+	lvgl/lvgl@9.0.0
 	fastled/FastLED @ 3.5.0
 	bogde/HX711 @ 0.7.5
 	adafruit/Adafruit VEML7700 Library @ 1.1.1
@@ -43,6 +45,9 @@ lib_deps =
     me-no-dev/AsyncTCP@^1.1.1
 	https://github.com/me-no-dev/ESPAsyncWebServer.git
 build_flags = 
+	;LVGL
+	-D LV_CONF_INCLUDE_SIMPLE=1
+
 	; Features
 	-D SK_WIFI=1
 	-D SK_MQTT=1 ; requires WIFI feature to be enabled
@@ -51,6 +56,7 @@ build_flags =
 	-D SK_STRAIN=1
 	-D SK_ALS=0
 	-D SK_PROXIMITY=0
+
 
 	; Motor & magnetometer config
 	-D SENSOR_MT6701=1
@@ -84,6 +90,7 @@ build_flags =
 	-D TFT_RST=10
 	-D TFT_WIDTH=240
 	-D TFT_HEIGHT=240
+	-D ESP32_DMA=1
 	-D USER_SETUP_LOADED=1
 	-D GC9A01_DRIVER=1
 	-D CGRAM_OFFSET=1
