Upped MQTT_MAX_PACKET_SIZE

--- a/platformio.ini
+++ b/platformio.ini
@@ -59,7 +59,7 @@ build_flags =
 	-D PIN_MT_CLOCK=13
 
 	; OTA config
-    -D ELEGANTOTA_USE_ASYNC_WEBSERVER=1
+    -D ELEGANTOTA_USE_ASYNC_WEBSERVER=0
 	
 	; Dev options
 	-D SK_UI_BOOT_MODE=1
@@ -92,6 +92,8 @@ build_flags =
 	-D SPI_FREQUENCY=40000000
 	-D SK_BACKLIGHT_BIT_DEPTH=12
 	
+    ; MQTT 
+    -D MQTT_MAX_PACKET_SIZE=256
 	
 	; TODO: chech where those variables used
 	-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
