--- a/platformio.ini
+++ b/platformio.ini
@@ -24,6 +24,7 @@ board = esp32-s3-devkitc-1-n16r8v
 board_build.partitions = ./firmware/partitions-4MB-fat.csv
 upload_speed = 921600
 monitor_speed = 115200
+monitor_filters = esp32_exception_decoder
 debug_speed = 1200
 debug_tool = esp-builtin
 lib_deps = 
