Added SUSPENDABLE_TASKS build flag to test extreme performance

--- a/platformio.ini
+++ b/platformio.ini
@@ -52,6 +52,7 @@ build_flags =
 	-D SK_STRAIN=1
 	-D SK_ALS=0
 	-D SK_PROXIMITY=0
+	-D SUSPENDABLE_TASKS=0
 
 	; Motor & magnetometer config
 	-D SENSOR_MT6701=1
