Manual cherry-pick DisplayBuffer branch to main

--- a/platformio.ini
+++ b/platformio.ini
@@ -51,6 +51,7 @@ build_flags =
 	-D SK_STRAIN=1
 	-D SK_ALS=0
 	-D SK_PROXIMITY=0
+	-D SUSPENDABLE_TASKS=0
 
 	; Motor & magnetometer config
 	-D SENSOR_MT6701=1
@@ -89,7 +90,7 @@ build_flags =
 	-D CGRAM_OFFSET=1
 	-D LOAD_GLCD=1
 	-D LOAD_GFXFF=1
-	-D SPI_FREQUENCY=40000000
+	-D SPI_FREQUENCY=80000000
 	-D SK_BACKLIGHT_BIT_DEPTH=12
 	
 	
