Resolves comments left by @brushknight

--- a/platformio.ini
+++ b/platformio.ini
@@ -107,11 +107,14 @@ build_flags =
 	; Features overrides
 	-D SK_ALS=1
 	-D SK_PROXIMITY=1 
-	-D SK_MQTT=0
+    -D SK_UI_BOOT_MODE=0
+	-D SK_WIFI=1
+	-D SK_MQTT=1 ; requires WIFI feature to be enabled
 
 	; Generic system config
 	-D PIN_SDA=39
-	-D PIN_SCL=38
+	-D PIN_SCL=38 
+    -D SK_MQTT_BUFFER_SIZE=2048
 
 	; Screen config
 	-D SK_DISPLAY_ROTATION=2
