--- a/platformio.ini
+++ b/platformio.ini
@@ -59,7 +59,7 @@ build_flags =
 	-D PIN_MT_CLOCK=13
 
 	; OTA config
-    -D ELEGANTOTA_USE_ASYNC_WEBSERVER=1
+    -D ELEGANTOTA_USE_ASYNC_WEBSERVER=0
 	
 	; Dev options
 	-D SK_UI_BOOT_MODE=1
@@ -92,6 +92,8 @@ build_flags =
 	-D SPI_FREQUENCY=40000000
 	-D SK_BACKLIGHT_BIT_DEPTH=12
 	
+    ; MQTT 
+    -D MQTT_MAX_PACKET_SIZE=256
 	
 	; TODO: chech where those variables used
 	-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
@@ -105,11 +107,14 @@ build_flags =
 	; Features overrides
 	-D SK_ALS=1
 	-D SK_PROXIMITY=1 
-	-D SK_MQTT=0
+    -D SK_UI_BOOT_MODE=0
+	-D SK_WIFI=1
+	-D SK_MQTT=1 ; requires WIFI feature to be enabled
 
 	; Generic system config
 	-D PIN_SDA=39
-	-D PIN_SCL=38
+	-D PIN_SCL=38 
+    -D SK_MQTT_BUFFER_SIZE=2048
 
 	; Screen config
 	-D SK_DISPLAY_ROTATION=2
