Fixed screen rotation in env. Removed old stuff.

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = seedlabs_devkit_onboarding
+default_envs = seedlabs_devkit
 src_dir = firmware/src
 lib_dir = firmware/lib
 include_dir = firmware/include
@@ -117,7 +117,7 @@ build_flags =
     -D SK_MQTT_BUFFER_SIZE=2048
 
 	; Screen config
-	-D SK_DISPLAY_ROTATION=2
+	-D SK_DISPLAY_ROTATION=0
 
 	; LED ring feature
 	-D PIN_LED_DATA=12
@@ -134,22 +134,12 @@ build_flags =
 	-D PIN_MT_CSN=11
 
 	; Strain sensor 
-	-D PIN_STRAIN_DO=21
+	-D PIN_STRAIN_Dgit O=21
 	-D PIN_STRAIN_SCK=1
 [env:seedlabs_devkit_inverted_display]
 build_flags = 
 	${env:seedlabs_devkit.build_flags}
-	-D SK_DISPLAY_ROTATION=0
 	-D SK_ALS=0
-
-[env:seedlabs_devkit_onboarding]
-build_flags = 
-	${env:seedlabs_devkit.build_flags}
-	-D SK_DISPLAY_ROTATION=0
-	-D SK_UI_BOOT_MODE=0
-	-D SK_ALS=0
-	-D SK_WIFI=1
-	-D SK_MQTT=1 ; requires WIFI feature to be enabled
 
 [env:seedlabs_devkit_github_action]
 build_flags = 
