Fixed issue occuring when removing old lib. Fixed mistake in platformio.ini

--- a/platformio.ini
+++ b/platformio.ini
@@ -134,7 +134,7 @@ build_flags =
 	-D PIN_MT_CSN=11
 
 	; Strain sensor 
-	-D PIN_STRAIN_Dgit O=21
+	-D PIN_STRAIN_DO=21
 	-D PIN_STRAIN_SCK=1
 [env:seedlabs_devkit_inverted_display]
 build_flags = 
