Rearanged some stuff in the platformio file.

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,13 +1,3 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
 [platformio]
 default_envs = seedlabs_devkit
 src_dir = firmware/src
@@ -15,6 +5,52 @@ lib_dir = firmware/lib
 include_dir = firmware/include
 test_dir = firmware/test
 data_dir = firmware/data
+
+[env:seedlabs_devkit]
+build_flags = 
+	${env.build_flags}
+	; Feature overrides
+	-D SK_ALS=1
+	-D SK_PROXIMITY=1 
+    -D SK_UI_BOOT_MODE=0
+	-D SK_WIFI=1
+	-D SK_MQTT=1 ; requires WIFI feature to be enabled
+
+	; Generic system config
+	-D PIN_SDA=39
+	-D PIN_SCL=38 
+    -D SK_MQTT_BUFFER_SIZE=2048
+
+	; Screen config
+	-D SK_DISPLAY_ROTATION=0
+
+	; LED ring feature
+	-D PIN_LED_DATA=12
+	-D NUM_LEDS=72
+
+	; Motor & magnetometer config
+	-D PIN_UH=8
+	-D PIN_UL=16
+	-D PIN_VH=18
+	-D PIN_VL=7
+	-D PIN_WH=17
+	-D PIN_WL=15
+	-D PIN_MT_DATA=14
+	-D PIN_MT_CSN=11
+
+	; Strain sensor 
+	-D PIN_STRAIN_DO=21
+	-D PIN_STRAIN_SCK=1
+[env:seedlabs_devkit_inverted_display]
+build_flags = 
+	${env:seedlabs_devkit.build_flags}
+	-D SK_ALS=0
+
+[env:seedlabs_devkit_github_action]
+build_flags = 
+	${env:seedlabs_devkit.build_flags}
+	-D SK_NETWORKING=0
+
 
 [env]
 platform = espressif32@6.3.1
@@ -101,55 +137,11 @@ build_flags =
 	-D SOC_GPIO_VALID_GPIO_MASK=0xFF0EFFFFFF
 	-D SOC_GPIO_VALID_OUTPUT_GPIO_MASK=0x30EFFFFFF
 
-[env:seedlabs_devkit]
+
+
+[env:seedlabs_legacy]
 build_flags = 
 	${env.build_flags}
-	; Features overrides
-	-D SK_ALS=1
-	-D SK_PROXIMITY=1 
-    -D SK_UI_BOOT_MODE=0
-	-D SK_WIFI=1
-	-D SK_MQTT=1 ; requires WIFI feature to be enabled
-
-	; Generic system config
-	-D PIN_SDA=39
-	-D PIN_SCL=38 
-    -D SK_MQTT_BUFFER_SIZE=2048
-
-	; Screen config
-	-D SK_DISPLAY_ROTATION=0
-
-	; LED ring feature
-	-D PIN_LED_DATA=12
-	-D NUM_LEDS=72
-
-	; Motor & magnetometer config
-	-D PIN_UH=8
-	-D PIN_UL=16
-	-D PIN_VH=18
-	-D PIN_VL=7
-	-D PIN_WH=17
-	-D PIN_WL=15
-	-D PIN_MT_DATA=14
-	-D PIN_MT_CSN=11
-
-	; Strain sensor 
-	-D PIN_STRAIN_DO=21
-	-D PIN_STRAIN_SCK=1
-[env:seedlabs_devkit_inverted_display]
-build_flags = 
-	${env:seedlabs_devkit.build_flags}
-	-D SK_ALS=0
-
-[env:seedlabs_devkit_github_action]
-build_flags = 
-	${env:seedlabs_devkit.build_flags}
-	-D SK_NETWORKING=0
-
-[env:brushknight_esp32s3]
-build_flags = 
-	${env.build_flags}
-	; TODO: update this section 
 	-D SK_DISPLAY_ROTATION=0
 	-D NUM_LEDS=8
 	-D SK_ALS=0
