Inital impl for factory reset.

--- a/platformio.ini
+++ b/platformio.ini
@@ -101,6 +101,9 @@ build_flags =
 	-D SOC_GPIO_VALID_GPIO_MASK=0xFF0EFFFFFF
 	-D SOC_GPIO_VALID_OUTPUT_GPIO_MASK=0x30EFFFFFF
 
+    ; Factory Reset
+    -D RESET_SECONDS=4
+
 [env:seedlabs_devkit]
 build_flags = 
 	${env.build_flags}
