Moved hard reset to 6 quick presses in short succession (500ms max inbetween). Soft reset acheived by hoding boot button for 5s.

--- a/platformio.ini
+++ b/platformio.ini
@@ -101,8 +101,8 @@ build_flags =
 	-D SOC_GPIO_VALID_GPIO_MASK=0xFF0EFFFFFF
 	-D SOC_GPIO_VALID_OUTPUT_GPIO_MASK=0x30EFFFFFF
 
-    ; Factory Reset
-    -D RESET_SECONDS=10
+    ; Soft Reset
+    -D RESET_SECONDS=5
 
 [env:seedlabs_devkit]
 build_flags = 
