Changed from https repo to ssh.

--- a/platformio.ini
+++ b/platformio.ini
@@ -158,6 +158,7 @@ build_flags =
 build_flags = 
 	${env:seedlabs_devkit.build_flags}
 lib_deps = 
+    git@github.com:SeedLabs-it/skdk-ota-pro.git
     infineon/TLV493D-Magnetic-Sensor @ 1.0.3
 	bxparks/AceButton @ 1.9.1
 	bakercp/PacketSerial @ 1.4.0
@@ -170,7 +171,6 @@ lib_deps =
 	adafruit/Adafruit_VL53L0X@^1.2.2
 	knolleary/PubSubClient@^2.8
 	ricmoo/QRCode@^0.0.1
-    https://github.com/SeedLabs-it/skdk-ota-pro.git
     
 [env:brushknight_esp32s3]
 build_flags = 
