--- a/platformio.ini
+++ b/platformio.ini
@@ -99,6 +99,8 @@ build_flags =
 	-D SOC_GPIO_VALID_GPIO_MASK=0xFF0EFFFFFF
 	-D SOC_GPIO_VALID_OUTPUT_GPIO_MASK=0x30EFFFFFF
 
+    -D ELEGANTOTA_PRO=0
+
 [env:seedlabs_devkit]
 build_flags = 
 	${env.build_flags}
@@ -157,6 +159,7 @@ build_flags =
 [env:seedlabs_devkit_github_action_release]
 build_flags = 
 	${env:seedlabs_devkit.build_flags}
+    -D SK_ELEGANTOTA_PRO=1
 lib_deps = 
     git@github.com:SeedLabs-it/skdk-ota-pro.git
     infineon/TLV493D-Magnetic-Sensor @ 1.0.3
