Removed github_action_env not needed anymore since we dont use the wifi_cred file anymore.

--- a/.github/workflows/pio.yml
+++ b/.github/workflows/pio.yml
@@ -52,7 +52,7 @@ jobs:
       if: always() && steps.pio_install.outcome == 'success'
       run: |
         pio run \
-          -e seedlabs_devkit_github_action
+          -e seedlabs_devkit
 
     # - name: Build Firmware (nanofoc)
     #   # Run regardless of other build step failures, as long as setup steps completed
