Added env variables to github action and as dynmanic variables to the .ini file

--- a/platformio.ini
+++ b/platformio.ini
@@ -160,6 +160,11 @@ build_flags =
 build_flags = 
 	${env:seedlabs_devkit.build_flags}
 	-D SK_ELEGANTOTA_PRO=1
+
+    !echo '-D RELEASE_VERSION=\\"'$RELEASE_VERSION'\\"'
+    !echo '-D COMMIT_HASH=\\"'$COMMIT_HASH'\\"'
+    !echo '-D BUILD_TIMESTAMP=\\"'$BUILD_TIMESTAMP'\\"'
+
 lib_deps = 
 	git@github.com:SeedLabs-it/skdk-ota-pro.git
 	infineon/TLV493D-Magnetic-Sensor @ 1.0.3
