Added missing build flag.

--- a/platformio.ini
+++ b/platformio.ini
@@ -99,7 +99,7 @@ build_flags =
 	-D SOC_GPIO_VALID_GPIO_MASK=0xFF0EFFFFFF
 	-D SOC_GPIO_VALID_OUTPUT_GPIO_MASK=0x30EFFFFFF
 
-    -D ELEGANTOTA_PRO=0
+    -D SK_ELEGANTOTA_PRO=0
 
 [env:seedlabs_devkit]
 build_flags = 
