--- a/platformio.ini
+++ b/platformio.ini
@@ -40,8 +40,6 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
 	ricmoo/QRCode@^0.0.1
 	ayushsharma82/ElegantOTA@^3.1.0
-    me-no-dev/AsyncTCP@^1.1.1
-	https://github.com/me-no-dev/ESPAsyncWebServer.git
 build_flags = 
 	; Features
 	-D SK_WIFI=1
@@ -101,6 +99,8 @@ build_flags =
 	-D SOC_GPIO_VALID_GPIO_MASK=0xFF0EFFFFFF
 	-D SOC_GPIO_VALID_OUTPUT_GPIO_MASK=0x30EFFFFFF
 
+    -D SK_ELEGANTOTA_PRO=0
+
 [env:seedlabs_devkit]
 build_flags = 
 	${env.build_flags}
@@ -151,6 +151,35 @@ build_flags =
 	-D SK_WIFI=1
 	-D SK_MQTT=1 ; requires WIFI feature to be enabled
 
+[env:seedlabs_devkit_github_action]
+build_flags = 
+	${env:seedlabs_devkit.build_flags}
+	-D SK_NETWORKING=0
+
+[env:seedlabs_devkit_github_action_release]
+build_flags = 
+	${env:seedlabs_devkit.build_flags}
+	-D SK_ELEGANTOTA_PRO=1
+
+    !echo '-D RELEASE_VERSION=\\"'$RELEASE_VERSION'\\"'
+    !echo '-D COMMIT_HASH=\\"'$COMMIT_HASH'\\"'
+    !echo '-D BUILD_TIMESTAMP=\\"'$BUILD_TIMESTAMP'\\"'
+
+lib_deps = 
+	git@github.com:SeedLabs-it/skdk-ota-pro.git
+	infineon/TLV493D-Magnetic-Sensor @ 1.0.3
+	bxparks/AceButton @ 1.9.1
+	bakercp/PacketSerial @ 1.4.0
+	nanopb/Nanopb @ 0.4.7
+	bodmer/TFT_eSPI@2.5.0
+	fastled/FastLED @ 3.5.0
+	bogde/HX711 @ 0.7.5
+	adafruit/Adafruit VEML7700 Library @ 1.1.1
+	askuric/Simple FOC@2.3.0
+	adafruit/Adafruit_VL53L0X@^1.2.2
+	knolleary/PubSubClient@^2.8
+	ricmoo/QRCode@^0.0.1
+    
 [env:brushknight_esp32s3]
 build_flags = 
 	${env.build_flags}
