Moved hard reset back to time based, soft 5s hard 15s. Added haptic feedback for when user reaches soft reset, might change haptics and have different for HARD reset and maybe way to prevent it? This will we done when doing UI for it.

--- a/platformio.ini
+++ b/platformio.ini
@@ -129,8 +129,9 @@ build_flags =
     -D SK_ELEGANTOTA_PRO=0
 
 
-    ; Soft Reset
-    -D RESET_SECONDS=5
+    ; Reset
+    -D SOFT_RESET_SECONDS=5
+    -D HARD_RESET_SECONDS=15
 
 
 [env:seedlabs_devkit_inverted_display]
