Factory reset and soft reset. (#100)

--- a/platformio.ini
+++ b/platformio.ini
@@ -128,6 +128,12 @@ build_flags =
 
     -D SK_ELEGANTOTA_PRO=0
 
+
+    ; Reset
+    -D SOFT_RESET_SECONDS=5
+    -D HARD_RESET_SECONDS=15
+
+
 [env:seedlabs_devkit_inverted_display]
 build_flags = 
 	${env:seedlabs_devkit.build_flags}
