Renamed inverted display to dev since all displays are mounted in same dir now.

--- a/platformio.ini
+++ b/platformio.ini
@@ -134,7 +134,7 @@ build_flags =
     -D HARD_RESET_SECONDS=15
 
 
-[env:seedlabs_devkit_inverted_display]
+[env:seedlabs_devkit_dev]
 build_flags = 
 	${env:seedlabs_devkit.build_flags}
 	-D SK_ALS=0
