--- a/platformio.ini
+++ b/platformio.ini
@@ -133,7 +133,7 @@ build_flags =
     -D SOFT_RESET_SECONDS=5
     -D HARD_RESET_SECONDS=15
 
-    -D MODEL='"SeedLabs DevKit v0.1"'
+    -D MODEL='"SmartKnob DevKit v0.1"'
 
 
 [env:seedlabs_devkit_inverted_display]
