Added back protobuf serial protocol to almost its original state, moved thirdparty folder into proto folder to keep folder structure more clean.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "thirdparty/nanopb"]
 	path = thirdparty/nanopb
 	url = git@github.com:nanopb/nanopb.git
+[submodule "proto/thirdparty/nanopb"]
+	path = proto/thirdparty/nanopb
+	url = https://github.com/nanopb/nanopb
