More data for init of knob in HASS. (#112)

--- a/platformio.ini
+++ b/platformio.ini
@@ -133,6 +133,8 @@ build_flags =
     -D SOFT_RESET_SECONDS=5
     -D HARD_RESET_SECONDS=15
 
+    -D MODEL='"SmartKnob DevKit v0.1"'
+
 
 [env:seedlabs_devkit_inverted_display]
 build_flags = 
