The issues ive been trying to debug for the last couple of hours, are a result of char[] inside the LOG macro in the logging.h file.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,7 +68,14 @@
         "bitset": "cpp",
         "chrono": "cpp",
         "ratio": "cpp",
-        "regex": "cpp"
+        "regex": "cpp",
+        "cerrno": "cpp",
+        "climits": "cpp",
+        "ios": "cpp",
+        "locale": "cpp",
+        "queue": "cpp",
+        "stack": "cpp",
+        "cstdbool": "cpp"
     },
     "[cpp]": {
         "editor.defaultFormatter": "ms-vscode.cpptools"
