some UI experiments

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,3 +1,13 @@
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
+
 [platformio]
 default_envs = seedlabs_devkit
 src_dir = firmware/src
@@ -9,26 +19,21 @@ data_dir = firmware/data
 [env:seedlabs_devkit]
 build_flags = 
 	${env.build_flags}
-	; Feature overrides
 	-D SK_ALS=1
-	-D SK_PROXIMITY=1 
-    -D SK_UI_BOOT_MODE=0
+	-D SK_PROXIMITY=1
+	-D SK_UI_BOOT_MODE=0
 	-D SK_WIFI=1
-	-D SK_MQTT=1 ; requires WIFI feature to be enabled
-
-	; Generic system config
+	-D SK_MQTT=1
+	
 	-D PIN_SDA=39
-	-D PIN_SCL=38 
-    -D SK_MQTT_BUFFER_SIZE=2048
-
-	; Screen config
+	-D PIN_SCL=38
+	-D SK_MQTT_BUFFER_SIZE=2048
+	
 	-D SK_DISPLAY_ROTATION=0
-
-	; LED ring feature
+	
 	-D PIN_LED_DATA=12
 	-D NUM_LEDS=72
-
-	; Motor & magnetometer config
+	
 	-D PIN_UH=8
 	-D PIN_UL=16
 	-D PIN_VH=18
@@ -37,17 +42,14 @@ build_flags =
 	-D PIN_WL=15
 	-D PIN_MT_DATA=14
 	-D PIN_MT_CSN=11
-
-	; Strain sensor 
+	
 	-D PIN_STRAIN_DO=21
 	-D PIN_STRAIN_SCK=1
-    
 
 [env]
 platform = espressif32@6.3.1
 framework = arduino
 board = esp32-s3-devkitc-1-n16r8v
-;TODO: update partition table to be aligned with n16r8
 board_build.partitions = ./firmware/partitions-4MB-fat.csv
 upload_speed = 921600
 monitor_speed = 115200
@@ -67,38 +69,32 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
 	ricmoo/QRCode@^0.0.1
 	ayushsharma82/ElegantOTA@^3.1.0
+	bitbank2/PNGdec@^1.0.2
 build_flags = 
-	; Features
 	-D SK_WIFI=1
-	-D SK_MQTT=1 ; requires WIFI feature to be enabled
+	-D SK_MQTT=1
 	-D SK_DISPLAY=1
-	-D SK_LEDS=1 
+	-D SK_LEDS=1
 	-D SK_STRAIN=1
 	-D SK_ALS=0
 	-D SK_PROXIMITY=0
-
-	; Motor & magnetometer config
+	
 	-D SENSOR_MT6701=1
 	-D SK_INVERT_ROTATION=1
 	-D MOTOR_WANZHIDA_ONCE_TOP=1
 	-D PIN_MT_CLOCK=13
-
-	; OTA config
-    -D ELEGANTOTA_USE_ASYNC_WEBSERVER=0
 	
-	; Dev options
+	-D ELEGANTOTA_USE_ASYNC_WEBSERVER=0
+	
 	-D SK_UI_BOOT_MODE=1
 	-D MONITOR_SPEED=115200
 	-D SK_FORCE_UART_STREAM=0
-
-	; System
+	
 	-D CONFIG_AUTOSTART_ARDUINO=1
-
-	; Strain sensor config
+	
 	-D STRAIN_DO=38
 	-D STRAIN_SCK=2
-
-	; Screen config
+	
 	-D PIN_LCD_BACKLIGHT=5
 	-D TFT_MISO=-1
 	-D TFT_MOSI=3
@@ -117,39 +113,35 @@ build_flags =
 	-D SPI_FREQUENCY=40000000
 	-D SK_BACKLIGHT_BIT_DEPTH=12
 	
-    ; MQTT 
-    -D MQTT_MAX_PACKET_SIZE=256
+	-D MQTT_MAX_PACKET_SIZE=256
 	
-	; TODO: chech where those variables used
 	-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
 	-D FASTLED_UNUSABLE_PIN_MASK=0x100740LL
 	-D SOC_GPIO_VALID_GPIO_MASK=0xFF0EFFFFFF
 	-D SOC_GPIO_VALID_OUTPUT_GPIO_MASK=0x30EFFFFFF
-
-    -D SK_ELEGANTOTA_PRO=0
-
-
-    ; Reset
-    -D SOFT_RESET_SECONDS=5
-    -D HARD_RESET_SECONDS=15
-
-    -D MODEL='"SmartKnob DevKit v0.1"'
-
+	
+	-D SK_ELEGANTOTA_PRO=0
+	
+	
+	-D SOFT_RESET_SECONDS=5
+	-D HARD_RESET_SECONDS=15
+	
+	-D MODEL='"SmartKnob DevKit v0.1"'
 
 [env:seedlabs_devkit_inverted_display]
 build_flags = 
 	${env:seedlabs_devkit.build_flags}
 	-D SK_ALS=0
+lib_deps = bitbank2/PNGdec@^1.0.2
 
 [env:seedlabs_devkit_github_action_release]
 build_flags = 
 	${env:seedlabs_devkit.build_flags}
 	-D SK_ELEGANTOTA_PRO=1
-
-    !echo '-D RELEASE_VERSION=\\"'$RELEASE_VERSION'\\"'
-    !echo '-D COMMIT_HASH=\\"'$COMMIT_HASH'\\"'
-    !echo '-D BUILD_TIMESTAMP=\\"'$BUILD_TIMESTAMP'\\"'
-
+	
+	!echo '-D RELEASE_VERSION=\\"'$RELEASE_VERSION'\\"'
+	!echo '-D COMMIT_HASH=\\"'$COMMIT_HASH'\\"'
+	!echo '-D BUILD_TIMESTAMP=\\"'$BUILD_TIMESTAMP'\\"'
 lib_deps = 
 	git@github.com:SeedLabs-it/skdk-ota-pro.git
 	infineon/TLV493D-Magnetic-Sensor @ 1.0.3
@@ -164,6 +156,7 @@ lib_deps =
 	adafruit/Adafruit_VL53L0X@^1.2.2
 	knolleary/PubSubClient@^2.8
 	ricmoo/QRCode@^0.0.1
+	bitbank2/PNGdec@^1.0.2
 
 [env:seedlabs_legacy]
 build_flags = 
@@ -188,3 +181,4 @@ build_flags =
 	-D TFT_RST=6
 	-D STRAIN_DO=38
 	-D STRAIN_SCK=2
+
