Added calibration weight to platformio.ini

--- a/platformio.ini
+++ b/platformio.ini
@@ -134,6 +134,9 @@ build_flags =
     -D HARD_RESET_SECONDS=15
 
     -D MODEL='"SmartKnob DevKit v0.1"'
+    
+    ; Calibration WEIGHT in grams
+    -D CALIBRATION_WEIGHT=272
 
 
 [env:seedlabs_devkit_inverted_display]
