Tare strain if idle and small changes and only every 10s at most.

--- a/platformio.ini
+++ b/platformio.ini
@@ -137,6 +137,8 @@ build_flags =
     
     ; Calibration WEIGHT in grams
     -D CALIBRATION_WEIGHT=272
+    ; Press weight in grams
+    -D PRESS_WEIGHT=200
 
 
 [env:seedlabs_devkit_inverted_display]
