Added factory weight strain calibration. (#119)

--- a/platformio.ini
+++ b/platformio.ini
@@ -135,6 +135,11 @@ build_flags =
     -D HARD_RESET_SECONDS=15
 
     -D MODEL='"SmartKnob DevKit v0.1"'
+    
+    ; Calibration WEIGHT in grams
+    -D CALIBRATION_WEIGHT=272
+    ; Press weight in grams
+    -D PRESS_WEIGHT=250
 
 [env:seedlabs_devkit_inverted_display]
 build_flags = 
