New release stuff, added zip file containing all built binaries. Alo renamed uploaded firmware.bin to "RELEASE_VERSION".bin

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,9 +53,15 @@ jobs:
       run: |
         pio run \
           -e seedlabs_devkit_github_action_release
+    - name: Zip Firmware
+      run: |
+        cd .pio/build/seedlabs_devkit_github_action_release/
+        cp ./firmware.bin "${RELEASE_VERSION}.bin"
+        cp ~/.pio/packages/framework-arduinoespressif32/tools/sdk/esp32s3/bin/bootloader_dio_80m.elf .pio/build/seedlabs_devkit_github_action_release/bootloader_dio_80m.elf
+        zip -r "${RELEASE_VERSION}.zip" ./ ~/.pio/build/seedlabs_devkit_github_action_release/bootloader_dio_80m.elf
     
     - name: Upload Release Assets
       uses: AButler/upload-release-assets@v3.0
       with:
-        files: ".pio/build/seedlabs_devkit_github_action_release/firmware.bin"
+        files: ".pio/build/seedlabs_devkit_github_action_release/${RELEASE_VERSION}.bin;.pio/build/seedlabs_devkit_github_action_release/${RELEASE_VERSION}.zip"
         repo-token: ${{ secrets.GITHUB_TOKEN }}
