--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,12 +56,12 @@ jobs:
     - name: Zip Firmware
       run: |
         cd .pio/build/seedlabs_devkit_github_action_release/
-        cp ./firmware.bin "${RELEASE_VERSION}.bin"
+        cp ./firmware.bin "firmware_${RELEASE_VERSION}.bin"
         cp ~/.platformio/packages/framework-arduinoespressif32/tools/sdk/esp32s3/bin/bootloader_dio_80m.elf ./bootloader_dio_80m.elf
         zip -r "${RELEASE_VERSION}.zip" ./ ~/.pio/build/seedlabs_devkit_github_action_release/bootloader_dio_80m.elf
     
     - name: Upload Release Assets
       uses: AButler/upload-release-assets@v3.0
       with:
-        files: ".pio/build/seedlabs_devkit_github_action_release/${RELEASE_VERSION}.bin;.pio/build/seedlabs_devkit_github_action_release/${RELEASE_VERSION}.zip"
+        files: ".pio/build/seedlabs_devkit_github_action_release/firmware_*.bin;.pio/build/seedlabs_devkit_github_action_release/*.zip"
         repo-token: ${{ secrets.GITHUB_TOKEN }}
