--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,7 +58,7 @@ jobs:
         cd .pio/build/seedlabs_devkit_github_action_release/
         cp ./firmware.bin "firmware_${RELEASE_VERSION}.bin"
         cp ~/.platformio/packages/framework-arduinoespressif32/tools/sdk/esp32s3/bin/bootloader_dio_80m.elf ./bootloader_dio_80m.elf
-        zip -r "${RELEASE_VERSION}.zip" ./ ~/.pio/build/seedlabs_devkit_github_action_release/bootloader_dio_80m.elf
+        zip -r "${RELEASE_VERSION}.zip" ./
     
     - name: Upload Release Assets
       uses: AButler/upload-release-assets@v3.0
