--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,7 +58,7 @@ jobs:
         cd .pio/build/seedlabs_devkit_github_action_release/
         cp ./firmware.bin "../firmware_${RELEASE_VERSION}.bin"
         cp ~/.platformio/packages/framework-arduinoespressif32/tools/partitions/boot_app0.bin ./boot_app0.bin
-        zip -r "${RELEASE_VERSION}.zip" -i "*.bin" "*.elf"
+        zip -r "${RELEASE_VERSION}.zip" ./*.bin ./*.elf
     
     - name: Upload Release Assets
       uses: AButler/upload-release-assets@v3.0
