--- a/platformio.ini
+++ b/platformio.ini
@@ -132,6 +132,17 @@ build_flags =
 	-D CALIBRATION_WEIGHT=272
 	-D PRESS_WEIGHT=250
 
+    ; LVGL
+    -D LV_LVGL_H_INCLUDE_SIMPLE=1
+    -D LV_CONF_SKIP=1
+    -D LV_COLOR_DEPTH=16
+    -D LV_TICK_CUSTOM=1
+    -D LV_THEME_DEFAULT_DARK=1
+    -D LV_USE_LOG=1
+    -D LV_USE_PERF_MONITOR=0
+    -D LV_USE_PERF_MONITOR_POS=LV_ALIGN_BOTTOM_MID
+    -D LV_USE_TFT_ESPI=1
+
 [env:seedlabs_devkit_inverted_display]
 build_flags = 
 	${env:seedlabs_devkit.build_flags}
