Trying to add font. Almost done with first page of onboarding.

--- a/platformio.ini
+++ b/platformio.ini
@@ -135,7 +135,7 @@ build_flags =
     ; LVGL
     -I ./firmware/src/display
     -D LV_CONF_INCLUDE_SIMPLE=1
-    ; -D LV_LVGL_H_INCLUDE_SIMPLE=1
+    -D LV_LVGL_H_INCLUDE_SIMPLE=1
     ; -D LV_TICK_CUSTOM=1
 
 [env:seedlabs_devkit_inverted_display]
