Removed stuff from lv_conf that we are not using now and will probably not use ever. Also updated some stuff in it. (Trying to reduce flash size.)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,7 +77,8 @@
         "stack": "cpp",
         "cstdbool": "cpp",
         "list": "cpp",
-        "thread": "cpp"
+        "thread": "cpp",
+        "events.h": "c"
     },
     "[cpp]": {
         "editor.defaultFormatter": "ms-vscode.cpptools"
