Updated platformio.ini to work with DMA.

--- a/platformio.ini
+++ b/platformio.ini
@@ -60,7 +60,8 @@ lib_deps =
 	infineon/TLV493D-Magnetic-Sensor @ 1.0.3
 	bakercp/PacketSerial @ 1.4.0
 	nanopb/Nanopb @ 0.4.7
-	bodmer/TFT_eSPI@2.5.0
+	; bodmer/TFT_eSPI@2.5.0
+	bodmer/TFT_eSPI@2.5.43
 	fastled/FastLED @ 3.5.0
 	bogde/HX711 @ 0.7.5
 	adafruit/Adafruit VEML7700 Library @ 1.1.1
@@ -107,9 +108,9 @@ build_flags =
 	-D USER_SETUP_LOADED=1
 	-D GC9A01_DRIVER=1
 	-D CGRAM_OFFSET=1
-	-D LOAD_GLCD=1
 	-D LOAD_GFXFF=1
-	-D SPI_FREQUENCY=40000000
+	-D SPI_FREQUENCY=80000000
+    -D SPI_READ_FREQUENCY=40000000
 	-D SK_BACKLIGHT_BIT_DEPTH=12
 	
 	-D MQTT_MAX_PACKET_SIZE=256
@@ -130,11 +131,13 @@ build_flags =
 	-D CALIBRATION_WEIGHT=272
 	-D PRESS_WEIGHT=250
 
+    -D ESP32_DMA=1
+    -D USE_HSPI_PORT=1
+
     ; LVGL
     -I ./firmware/src/display
     -D LV_CONF_INCLUDE_SIMPLE=1
     -D LV_LVGL_H_INCLUDE_SIMPLE=1
-    ; -D LV_TICK_CUSTOM=1
 
 [env:seedlabs_devkit_inverted_display]
 build_flags = 
