Fixed rendering issue, added colored logo and HASS logo.

--- a/platformio.ini
+++ b/platformio.ini
@@ -131,6 +131,7 @@ build_flags =
 	-D CALIBRATION_WEIGHT=272
 	-D PRESS_WEIGHT=250
 
+    ; Needed for DMA
     -D ESP32_DMA=1
     -D USE_HSPI_PORT=1
 
