Broken. Whilst fixing demo_apps for lvgl.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,7 +78,8 @@
         "cstdbool": "cpp",
         "list": "cpp",
         "thread": "cpp",
-        "events.h": "c"
+        "events.h": "c",
+        "app_config.h": "c"
     },
     "[cpp]": {
         "editor.defaultFormatter": "ms-vscode.cpptools"
