More cleanup, change to proto file to align with app_id in firmware. Now state is only sent to apps with correct identifier to prevent "overflow" when moving from menu to app.

--- a/proto/Pipfile
+++ b/proto/Pipfile
@@ -5,9 +5,9 @@ name = "pypi"
 
 [packages]
 grpcio-tools = "*"
-protobuf = "==3.20.3"
+protobuf = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.10"
+python_version = "3.12"
