--- a/platformio.ini
+++ b/platformio.ini
@@ -71,6 +71,7 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
 	ayushsharma82/ElegantOTA@^3.1.0
     lvgl/lvgl@^9.1.0
+    lovyan03/LovyanGFX@^1.1.12
 build_flags = 
 	-D SK_WIFI=1
 	-D SK_MQTT=1
