--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,7 +80,9 @@
         "thread": "cpp",
         "events.h": "c",
         "app_config.h": "c",
-        "logging.h": "c"
+        "logging.h": "c",
+        "x40_light_filled.c": "cpp",
+        "x40_light_outline.c": "cpp"
     },
     "[cpp]": {
         "editor.defaultFormatter": "ms-vscode.cpptools"
