--- a/platformio.ini
+++ b/platformio.ini
@@ -140,6 +140,11 @@ build_flags =
     ; Press weight in grams
     -D PRESS_WEIGHT=250
 
+    ; KNOB ENGAGED TIMEOUT MILISECONDS
+    -D KNOB_ENGAGED_TIMEOUT_NONE_PHYSICAL=8000
+    -D KNOB_ENGAGED_TIMEOUT_PHYSICAL=30000
+
+
 [env:seedlabs_devkit_inverted_display]
 build_flags = 
 	${env:seedlabs_devkit.build_flags}
