extracted wake distance and beacon mode to the conf

--- a/platformio.ini
+++ b/platformio.ini
@@ -42,6 +42,11 @@ build_flags =
 	-D PIN_STRAIN_DO=21
 	-D PIN_STRAIN_SCK=1
     
+	; Firmware features, TODO: move to config
+	-D PROXIMITY_WAKE_DISTANCE=650
+	-D NIGHT_LIGHT=false
+	
+
 
 [env]
 platform = espressif32@6.3.1
