--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,7 +86,9 @@
     },
     "[cpp]": {
         "editor.defaultFormatter": "ms-vscode.cpptools"
+        
     },
+    "C_Cpp.clang_format_style": "file",
     "editor.indentSize": "tabSize",
     "editor.tabSize": 4
 }
