Added error "page" that is for now only triggered on reset. Will work for wifi and mqtt errors.

--- a/platformio.ini
+++ b/platformio.ini
@@ -46,6 +46,9 @@ build_flags =
 	-D PIN_STRAIN_DO=21
 	-D PIN_STRAIN_SCK=1
 
+	-D MODEL='"SmartKnob DevKit v0.1"'
+
+
 [env]
 platform = espressif32@6.3.1
 framework = arduino
@@ -127,7 +130,7 @@ build_flags =
 	-D SOFT_RESET_SECONDS=5
 	-D HARD_RESET_SECONDS=15
 	
-	-D MODEL='"SmartKnob DevKit v0.1"'
+    -D RELEASE_VERSION='"DEV"'
 	
 	-D CALIBRATION_WEIGHT=272
 	-D PRESS_WEIGHT=250
