Climate/thermostat app almost fully functional just gotta add min temp and max temp labels.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -84,7 +84,8 @@
         "x40_light_filled.c": "cpp",
         "x40_light_outline.c": "cpp",
         "condition_variable": "cpp",
-        "mutex": "cpp"
+        "mutex": "cpp",
+        "lvgl.h": "c"
     },
     "[cpp]": {
         "editor.defaultFormatter": "ms-vscode.cpptools"
