--- a/platformio.ini
+++ b/platformio.ini
@@ -21,9 +21,6 @@ build_flags =
 	${env.build_flags}
 	-D SK_ALS=1
 	-D SK_PROXIMITY=1
-	-D SK_UI_BOOT_MODE=0
-	-D SK_WIFI=1
-	-D SK_MQTT=1
 	
 	-D PIN_SDA=39
 	-D PIN_SCL=38
@@ -42,6 +39,8 @@ build_flags =
 	-D PIN_WL=15
 	-D PIN_MT_DATA=14
 	-D PIN_MT_CSN=11
+
+	-D TFT_RST=10
 	
 	-D PIN_STRAIN_DO=21
 	-D PIN_STRAIN_SCK=1
@@ -75,13 +74,11 @@ lib_deps =
     lvgl/lvgl@^8.4.0
     lovyan03/LovyanGFX@^1.1.12
 build_flags = 
-	-D SK_WIFI=1
+    -D SK_WIFI=1
 	-D SK_MQTT=1
 	-D SK_DISPLAY=1
 	-D SK_LEDS=1
 	-D SK_STRAIN=1
-	-D SK_ALS=0
-	-D SK_PROXIMITY=0
 	
 	-D SENSOR_MT6701=1
 	-D SK_INVERT_ROTATION=1
@@ -90,14 +87,11 @@ build_flags =
 	
 	-D ELEGANTOTA_USE_ASYNC_WEBSERVER=0
 	
-	-D SK_UI_BOOT_MODE=1
+	-D SK_UI_BOOT_MODE=0
 	-D MONITOR_SPEED=115200
 	-D SK_FORCE_UART_STREAM=0
 	
 	-D CONFIG_AUTOSTART_ARDUINO=1
-	
-	-D STRAIN_DO=38
-	-D STRAIN_SCK=2
 	
 	-D PIN_LCD_BACKLIGHT=5
 	-D TFT_MISO=-1
@@ -106,7 +100,6 @@ build_flags =
 	-D TFT_CS=9
 	-D TFT_DC=2
 	-D TFT_BL=-1
-	-D TFT_RST=10
 	-D TFT_WIDTH=240
 	-D TFT_HEIGHT=240
 	-D USER_SETUP_LOADED=1
@@ -120,9 +113,11 @@ build_flags =
 	-D MQTT_MAX_PACKET_SIZE=256
 	
 	-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
-	-D FASTLED_UNUSABLE_PIN_MASK=0x100740LL
-	-D SOC_GPIO_VALID_GPIO_MASK=0xFF0EFFFFFF
-	-D SOC_GPIO_VALID_OUTPUT_GPIO_MASK=0x30EFFFFFF
+
+    ; Not certain why these were here please double check if they are needed, does compile and flash without them
+	; -D FASTLED_UNUSABLE_PIN_MASK=0x100740LL
+	; -D SOC_GPIO_VALID_GPIO_MASK=0xFF0EFFFFFF
+	; -D SOC_GPIO_VALID_OUTPUT_GPIO_MASK=0x30EFFFFFF
 	
 	-D SK_ELEGANTOTA_PRO=0
 	
@@ -136,7 +131,7 @@ build_flags =
 	-D PRESS_WEIGHT=250
 
     ; Needed for DMA
-    -D ESP32_DMA=1
+    -D ESP32_DMA=1 ; already defined in tft_espi add back when remiving tft_espi
     -D USE_HSPI_PORT=1
 
     ; LVGL
@@ -168,7 +163,7 @@ lib_deps =
 	bxparks/AceButton @ 1.9.1
 	bakercp/PacketSerial @ 1.4.0
 	nanopb/Nanopb @ 0.4.7
-	bodmer/TFT_eSPI@2.5.0
+	; bodmer/TFT_eSPI@2.5.0
 	fastled/FastLED @ 3.5.0
 	bogde/HX711 @ 0.7.5
 	adafruit/Adafruit VEML7700 Library @ 1.1.1
@@ -180,10 +175,11 @@ lib_deps =
 [env:seedlabs_legacy]
 build_flags = 
 	${env.build_flags}
-	-D SK_DISPLAY_ROTATION=0
-	-D NUM_LEDS=8
 	-D SK_ALS=0
 	-D SK_PROXIMITY=0
+
+	-D SK_DISPLAY_ROTATION=0
+	-D NUM_LEDS=8
 	
 	-D PIN_STRAIN_DO=38
 	-D PIN_UH=20
