--- a/platformio.ini
+++ b/platformio.ini
@@ -62,8 +62,6 @@ lib_deps =
 	infineon/TLV493D-Magnetic-Sensor @ 1.0.3
 	bakercp/PacketSerial @ 1.4.0
 	nanopb/Nanopb @ 0.4.7
-	; bodmer/TFT_eSPI@2.5.0
-	bodmer/TFT_eSPI@2.5.43
 	fastled/FastLED @ 3.5.0
 	bogde/HX711 @ 0.7.5
 	adafruit/Adafruit VEML7700 Library @ 1.1.1
@@ -131,7 +129,7 @@ build_flags =
 	-D PRESS_WEIGHT=250
 
     ; Needed for DMA
-    -D ESP32_DMA=1 ; already defined in tft_espi add back when remiving tft_espi
+    ; -D ESP32_DMA=1 ; already defined in tft_espi add back when remiving tft_espi
     -D USE_HSPI_PORT=1
 
     ; LVGL
@@ -163,7 +161,6 @@ lib_deps =
 	bxparks/AceButton @ 1.9.1
 	bakercp/PacketSerial @ 1.4.0
 	nanopb/Nanopb @ 0.4.7
-	; bodmer/TFT_eSPI@2.5.0
 	fastled/FastLED @ 3.5.0
 	bogde/HX711 @ 0.7.5
 	adafruit/Adafruit VEML7700 Library @ 1.1.1
