Updated github action release lib deps.

--- a/platformio.ini
+++ b/platformio.ini
@@ -158,16 +158,16 @@ build_flags =
 lib_deps = 
 	git@github.com:SeedLabs-it/skdk-ota-pro.git
 	infineon/TLV493D-Magnetic-Sensor @ 1.0.3
-	bxparks/AceButton @ 1.9.1
 	bakercp/PacketSerial @ 1.4.0
 	nanopb/Nanopb @ 0.4.7
 	fastled/FastLED @ 3.5.0
 	bogde/HX711 @ 0.7.5
 	adafruit/Adafruit VEML7700 Library @ 1.1.1
-	askuric/Simple FOC@2.3.0
+	askuric/Simple FOC@2.3.3
 	adafruit/Adafruit_VL53L0X@^1.2.2
 	knolleary/PubSubClient@^2.8
-	ricmoo/QRCode@^0.0.1
+    lvgl/lvgl@^8.4.0
+    lovyan03/LovyanGFX@^1.1.12
 
 [env:seedlabs_legacy]
 build_flags = 
